fixed display: none on iphone-symbols

--- a/src/pages/stc.module.css
+++ b/src/pages/stc.module.css
@@ -128,6 +128,7 @@
     .h1 {
         font-size: 2rem;
     }
+}
 
 @media (min-width: 600px) {
     .wrapper {
@@ -136,6 +137,10 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+    }
+
+    .clock, .blackBox, .iphoneIconsWrapper {
+        display: none;
     }
 
     .heroImg {
@@ -174,6 +179,4 @@
         font-size: 4.5rem;
         margin: 24px;
     }
-}
-
 }
